cmake_minimum_required(VERSION 2.6)

MESSAGE(STATUS ${CMAKE_BINARY_DIR})
MESSAGE(STATUS ${CMAKE_SOURCE_DIR})

if(WIN32)
  set_property(GLOBAL PROPERTY USE_FOLDERS On)
endif(WIN32)

PROJECT(try-libevent)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

add_definitions(/wd4996)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/3rdpart/libevent/include)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/3rdpart/libevent/libs)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/3rdpart/common/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/3rdpart/common/include/3rdpart)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/3rdpart/common/libs)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR})

ADD_SUBDIRECTORY(try-connect)
ADD_SUBDIRECTORY(try-listen)
ADD_SUBDIRECTORY(try-event)




